[tool.poetry]
name = "auto_meander"
version = "0.1.0"
description = ""
authors = ["Henning Jacobs <henning@jacobs1.de>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.1"
svgwrite = "^1.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
